--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
 
     <string name="error_loading_articles">Problem with loading articles</string>
     <string name="error_loading_sources">Problem with loading sources</string>
+    <string name="error_loading_reload_action">Try again?</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
